--- a/.gitignore
+++ b/.gitignore
@@ -83,17 +83,17 @@ web_modules/
 .cache
 .parcel-cache
 
-# Next.js build output
+# Next.dist build output
 .next
 out
 
-# Nuxt.js build / generate output
+# Nuxt.dist build / generate output
 .nuxt
-public/scripts
+public/dist
 
 # Gatsby files
 .cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
+# Comment in the public line in if your project uses Gatsby and not Next.dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
